--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "less-loader": "^5.0.0",
     "prettier": "^1.19.1",
     "typescript": "~3.7.5",
+    "vue-cli-plugin-webpack-bundle-analyzer": "^2.0.0",
     "vue-template-compiler": "^2.6.11"
   }
 }
